##Copyright (C) 2020, Advanced Micro Devices, Inc.## 
target_sources("${PROJECT_NAME}" 
     PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}/FLA_bdsqr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gebrd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gehrd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gelqf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gelsd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_geqpf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_geqrf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gesdd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_gesvd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_getrf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_getrfnp.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_getrfnpi.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_hegst.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_hetrd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_lapack2flame_prototypes.h
${CMAKE_CURRENT_SOURCE_DIR}/FLA_lapack2flame_return_defs.h
${CMAKE_CURRENT_SOURCE_DIR}/FLA_lapack2flame_util.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_lapack2flame_util_defs.h
${CMAKE_CURRENT_SOURCE_DIR}/FLA_larfg.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_lauum.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_orgbr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_orglq.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_orgqr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_orgtr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_ormbr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_ormlq.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_ormqr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_ormtr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_potrf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_potri.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_trsyl.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_trtri.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_spffrtx.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_spffrt2.c
	)
	
add_subdirectory(check)
add_subdirectory(f2c)
